--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,16 @@ dependencies:
   image_picker: ^0.6.7+4
   sms_otp_auto_verify: ^1.2.2
   cupertino_icons: ^0.1.3
-  
+  floor: ^0.18.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^0.12.1
   intl: ^0.16.0
   flutter_spinkit: ^4.1.2+1
-
+  floor_generator: ^0.18.0
+  build_runner: ^1.10.3
 
 flutter:
   uses-material-design: true
