--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
   sms_otp_auto_verify: ^1.2.2
   cupertino_icons: ^0.1.3
   floor: ^0.18.0
+  either_dart: ^0.0.5
+  shared_preferences: ^0.5.12+4
+  splashscreen: ^1.3.5
+  sqflite: ^1.3.2+2
+  floor_annotation: ^0.11.0
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +39,4 @@ flutter:
     - family: Iconfont
       fonts:
         - asset: fonts/icofont/icofont.ttf
+
