--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sqflite: ^1.3.2+2
   floor_annotation: ^0.11.0
   provider: ^4.3.2+3
+  # url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
