--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,27 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^0.1.3
+  date_time_picker: ^1.1.1
+  either_dart: ^0.0.5
+  floor: ^0.18.0
+  floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
   image_picker: ^0.6.7+4
-  sms_otp_auto_verify: ^1.2.2
-  cupertino_icons: ^0.1.3
-  floor: ^0.18.0
-  either_dart: ^0.0.5
+  mapbox_gl: ^0.9.0
+  provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
+  sms_otp_auto_verify: ^1.2.2
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
-  floor_annotation: ^0.11.0
-  provider: ^4.3.2+3
-  # url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.3
+  floor_generator: ^0.18.0
+  flutter_spinkit: ^4.1.2+1
   http: ^0.12.1
   intl: ^0.16.0
-  flutter_spinkit: ^4.1.2+1
-  floor_generator: ^0.18.0
-  build_runner: ^1.10.3
 
 flutter:
   uses-material-design: true
@@ -40,4 +41,3 @@ flutter:
     - family: Iconfont
       fonts:
         - asset: fonts/icofont/icofont.ttf
-
