--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
   image_picker: ^0.6.7+4
-  mapbox_gl: ^0.9.0
+  # mapbox_gl: ^0.9.0
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
   sms_otp_auto_verify: ^1.2.2
