--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.7.0
   cupertino_icons: ^0.1.3
   date_time_picker: ^1.1.1
   either_dart: ^0.0.5
@@ -16,7 +17,6 @@ dependencies:
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
   image_picker: ^0.6.7+4
-  mapbox_gl: ^0.9.0
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
   sms_otp_auto_verify: ^1.2.2
