removing sentry resolves gradle bug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,8 @@
     "configurations": [{
         "name": "agriview-flutter-repo",
         "request": "launch",
-        "type": "dart"
+        "type": "dart",
+        "console": "terminal",
+        "flutterMode": "debug",
     }]
 }
