--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.7.0
+  # camera: ^0.7.0
   cupertino_icons: ^0.1.3
   date_time_picker: ^1.1.1
   either_dart: ^0.0.5
@@ -19,9 +19,12 @@ dependencies:
   image_picker: ^0.6.7+4
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
-  sms_otp_auto_verify: ^1.2.2
+  # sms_otp_auto_verify: ^1.2.2
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
+  # sentry_flutter: ^4.0.1
+
+
 
 dev_dependencies:
   flutter_test:
