--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,22 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # camera: ^0.7.0
   cupertino_icons: ^0.1.3
   date_time_picker: ^1.1.1
   either_dart: ^0.0.5
   floor: ^0.18.0
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
+  geolocator: ^6.1.14
+  google_maps_flutter: ^1.1.1
   image_picker: ^0.6.7+4
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
-  # sms_otp_auto_verify: ^1.2.2
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
-  # sentry_flutter: ^4.0.1
-
-
 
 dev_dependencies:
   flutter_test:
