--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
   geolocator: ^6.1.14
+  get_it: ^5.0.6
   google_maps_flutter: ^1.1.1
   image_picker: ^0.6.7+4
   provider: ^4.3.2+3
