--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  date_time_picker: ^1.1.1
+  dio: ^3.0.10
   either_dart: ^0.0.5
   floor: ^0.18.0
   floor_annotation: ^0.11.0
@@ -20,9 +20,12 @@ dependencies:
   google_maps_flutter: ^1.1.1
   image_picker: ^0.6.7+4
   provider: ^4.3.2+3
+  retry: ^3.0.1
   shared_preferences: ^0.5.12+4
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
+  pretty_dio_logger: ^1.1.1
+  fimber: ^0.4.4
 
 dev_dependencies:
   flutter_test:
@@ -30,8 +33,8 @@ dev_dependencies:
   build_runner: ^1.10.3
   floor_generator: ^0.18.0
   flutter_spinkit: ^4.1.2+1
-  http: ^0.12.1
   intl: ^0.16.0
+  
 
 flutter:
   uses-material-design: true
