--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   dio: ^3.0.10
   either_dart: ^0.0.5
+  fimber: ^0.4.4
   floor: ^0.18.0
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
@@ -19,13 +20,14 @@ dependencies:
   get_it: ^5.0.6
   google_maps_flutter: ^1.1.1
   image_picker: ^0.6.7+4
+  mapbox_gl: ^0.9.0
+  pretty_dio_logger: ^1.1.1
   provider: ^4.3.2+3
   retry: ^3.0.1
+  sentry_flutter: ^4.0.4
   shared_preferences: ^0.5.12+4
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
-  pretty_dio_logger: ^1.1.1
-  fimber: ^0.4.4
 
 dev_dependencies:
   flutter_test:
@@ -34,7 +36,6 @@ dev_dependencies:
   floor_generator: ^0.18.0
   flutter_spinkit: ^4.1.2+1
   intl: ^0.16.0
-  
 
 flutter:
   uses-material-design: true
