--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   flutter_datetime_picker: ^1.4.0
   geolocator: ^6.1.14
   get_it: ^5.0.6
+  google_maps_flutter: ^1.2.0
   gpx: ^1.1.1
   image_picker: ^0.6.7+4
-  mapbox_gl: ^0.9.0
   path_provider: ^1.6.27
   pretty_dio_logger: ^1.1.1
   provider: ^4.3.2+3
