--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cached_network_image: ^2.5.0
   cupertino_icons: ^0.1.3
   dio: ^3.0.10
+  dio_http_cache: ^0.2.11
   either_dart: ^0.0.5
   fimber: ^0.4.4
   floor: ^0.18.0
@@ -30,7 +31,6 @@ dependencies:
   shared_preferences: ^0.5.12+4
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
-  
 
 dev_dependencies:
   flutter_test:
