--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get_it: ^5.0.6
   google_maps_flutter: ^1.2.0
   gpx: ^1.1.1
+  graphql_flutter: ^4.0.1
   image_picker: ^0.6.7+4
   path_provider: ^1.6.27
   pretty_dio_logger: ^1.1.1
