--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   splashscreen: ^1.3.5
   sqflite: ^1.3.2+2
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
