--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=agriview@1
-keyPassword=agriview@1
-keyAlias=agriview
-storeFile=F:\\AginMain\\Documents\\kii\\agriview.jks
+storePassword=xanthosis
+keyPassword=xanthosis
+keyAlias=key
+storeFile=/Users/amshelkanyi/key.jks
