--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: AgriView
 description: Agronomy application.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+6
+version: 1.0.0+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -18,6 +18,7 @@ dependencies:
   floor: ^0.18.0
   floor_annotation: ^0.11.0
   flutter_datetime_picker: ^1.4.0
+  flutter_image_compress: ^0.7.0
   geolocator: ^6.1.14
   get_it: ^5.0.6
   google_maps_flutter: ^1.2.0
@@ -26,7 +27,7 @@ dependencies:
   image_picker: ^0.6.7+4
   oktoast: ^2.3.2
   otp_text_field: ^1.0.1
-  path_provider: ^1.6.27
+  path_provider: ^1.6.10
   pretty_dio_logger: ^1.1.1
   provider: ^4.3.2+3
   retry: ^3.0.1
